# SortingAlgorithms

./: .gitignore  CMakeLists.txt  README.md  SortingAlgorithms.sln  license.md
SortingAlgorithms/: BinaryTree.h  Bubble.cpp  Bubble.h  Bucket.cpp  Bucket.h  Button.cpp  Button.h  Cycle.cpp  Cycle.h  Draw.cpp  Draw.h  Dropdown.cpp  Dropdown.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Insertion.cpp  Insertion.h  Merge.cpp  Merge.h  Quick.cpp  Quick.h  QuickTree.cpp  QuickTree.h  Selection.cpp  Selection.h  SortingAlgorithm.cpp  SortingAlgorithm.h  SortingAlgorithms.vcxproj  SortingAlgorithms.vcxproj.filters  StringU.cpp  StringU.h  Update.cpp  Update.h  main.cpp  maincpp.cpp
src/: Alg.cpp  Alg.h  AlgoDraw.cpp  AlgoDraw.h  BinaryTree.h  Bubble.cpp  Bubble.h  Bucket.cpp  Bucket.h  Button.cpp  Button.h  Cycle.cpp  Cycle.h  Dropdown.cpp  Dropdown.h  Game.cpp  Game.h  Insertion.cpp  Insertion.h  Main.cpp  Main.h  Merge.cpp  Merge.h  Quick.cpp  Quick.h  Selection.cpp  Selection.h  SortingAlgorithm.cpp  SortingAlgorithm.h  StringU.cpp  StringU.h  StyleLoader.cpp  StyleLoader.h  config.cpp  config.h  main.cpp
styles/: style0.conf  style1.conf  style2.conf  style3.conf  style4.conf  style5.conf  style6.conf  style7.conf  style8.conf  style9.conf
